<resources>
    <string name="app_name">AccessibilityMonitor</string>
    <string name="accessibility_service_description">Monitors restricted apps usage</string>
    <string name="request_wi_fi_permission">Request Wi-Fi Permission</string>
    <string name="select_apps_for_restriction">Select Apps for restriction</string>
    <string name="request_notification_permission">Request Notification Permission</string>
    <string name="open_accessibility_settings">Open Accessibility Settings</string>
    <string name="accessibility_service_status">Accessibility Service Status</string>
    <string name="go_back">go back</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>

    <string-array name="restriction_options">
            <item>None</item>
            <item>Wi-Fi</item>
            <item>Cellular</item>
            <item>Wi-Fi and Cellular</item>
        </string-array>

</resources>