<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <!-- Accessibility Status Text -->
    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessibility_service_status"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/open_accessibility_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_accessibility_settings"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/request_notification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_notification_permission"
        android:layout_marginBottom="16dp" />

    <!-- Request Wi-Fi Permission Button -->
    <Button
        android:id="@+id/request_wifi_permission_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_wi_fi_permission"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/selection_apps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_apps_for_restriction"
        android:layout_marginBottom="16dp" />
    <Button
        android:id="@+id/open_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Open Monitoring Settings" />
</LinearLayout>
